5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1667_2322.log
== TEST (2019-04-16 16:22:35) 
-- CODE:
nome = input('Nome do bruxo: (S/N)')
neville = 15.7654 / 1.3479
luna = 7.674 / 3.789

#if (nome==neville):
	mensagem
-- ERROR:
File "XXXX", line 6
    mensagem
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:54) 
-- CODE:
nome = input('Nome do bruxo: (S/N)')
neville = 15.7654 / 1.3479
luna = 7.674 / 3.789
print (neville)

#if (nome==neville):
	#mensagem
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:26) 
-- CODE:
nome = input('Nome do bruxo: '(S/N))
neville = 15.7654 / 1.3479
luna = 7.674 / 3.789
print (neville)

#if (nome==neville):
	#mensagem
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = input('Nome do bruxo: '(S/N))
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:35) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 15.7654 / 1.3479
luna = 7.674 / 3.789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:14) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 157654 / 13479
luna = 7674 / 3789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(mensagem.lower())
AttributeError: 'float' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:36) 
-- CODE:
nome = input('Nome do bruxo: '.lower())
neville = 157654 / 13479
luna = 7674 / 3789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
nome do bruxo: 2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:26) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 157654 * 13479
luna = 7674 * 3789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
29076786
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:55) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 157654/13479
luna = 7674/3789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:40) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:07) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 15.7654*1.3479
luna = 7.674*3.789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
29.076786000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:13) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:07) 
-- CODE:
nome = input('Nome do bruxo: ')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:28) 
-- CODE:
nome = input('Nome do bruxo: (neville/luna)')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==neville):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:55) 
-- CODE:
nome = input('Nome do bruxo Neville? (S/N)')
neville = 15.7654/1.3479
luna = 7.674/3.789
print(luna)
#if ():
#	mensagem = neville
	
#else:
#	mensagem = luna
#print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:09) 
-- CODE:
#nome = input('Nome do bruxo Neville? (S/N)')
neville = 15.7654/1.3479
luna = 7.674/3.789
print(luna)
#if ():
#	mensagem = neville
	
#else:
#	mensagem = luna
#print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:21) 
-- CODE:
#nome = input('Nome do bruxo Neville? (S/N)')
neville = 15.7654/1.3479
luna = 7.674/3.789
print(luna)
#if ():
#	mensagem = neville
	
#else:
#	mensagem = luna
#print(mensagem)
-- OUTPUT:
2.0253365003958828
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:34) 
-- CODE:
#nome = input('Nome do bruxo Neville? (S/N)')
neville = 15.7654/1.3479
luna = 7.674/3.789
print(neville)
#if ():
#	mensagem = neville
	
#else:
#	mensagem = luna
#print(mensagem)
-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:13) 
-- CODE:
nome = input('Nome do bruxo Neville? (S/N)')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==s):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:26) 
-- CODE:
nome = input('Nome do bruxo Neville?(S/N) ')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==s):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:56) 
-- CODE:
nome = input('Nome do bruxo Neville?(S/N) ')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (S/N==s):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (S/N==s):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:54) 
-- CODE:
nome = input('Nome do bruxo Neville?(S/N) ')
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==s):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:14) 
-- CODE:
nome = input('Nome do bruxo Neville?(S/N) ')
n = s
neville = 15.7654/1.3479
luna = 7.674/3.789

if (nome==n):
	mensagem = neville
	
else:
	mensagem = luna
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = s
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
